# noeticbraid

./: .gitattributes  .gitignore  .mcp.json  NOTICE  PHASE1_MUP_GATE.md  PROJECT_STATUS.md  README.md  conftest.py  manifest.md  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: audit_trail.md  audit_trail_proposed_additions.md  domain_strategy.md  open_private_boundary.md  remote_gpt_handoff_protocol.md
docs/architecture/: step3_authority.md  step4_authority.md  step5_phase1_1_design.md
docs/contracts/: phase1_1_api_contract.md  phase1_1_openapi.yaml  phase1_1_pydantic_schemas.py  phase1_2_openapi.yaml  phase1_2_openapi.yaml.sha256  phase1_3_openapi.yaml  phase1_3_openapi.yaml.sha256  review_template.md  vault_layout.yaml
docs/decisions/: D-Naming-1.md  D-Secret-Policy-1.md  D-Step4-1.md  D-Step4-2.md  D-Step4-3.md  D-Step4-4A.md  D-Step4-4B.md  D-Step4-4C.md  D-Step4-4D.md
legacy/: README.md
private/: README.md
reuse_log/: README.md  phase1_1_reuse_candidates.md  phase1_1_stage2_console_reuse_candidates.md  phase1_1_stage2_guard_reuse_candidates.md  phase1_1_stage2_ledger_reuse_candidates.md
scripts/: README.md  apply_legacy_readonly.ps1  check_gate_1_0_to_1_1.ps1  check_gate_1_0_to_1_1.py  check_gate_1_1_to_1_2.ps1  check_gate_1_1_to_1_2.py  check_phase1_2_contract_gate.py  check_source_of_truth_consistency.py  contract_diff.py  eval_replay.py  hub-browser.sh  hub-mcp.sh  hub_watchdog.py  notebooklm_pool.py  private_leak_scan.py
tests/: README.md  conftest.py  test_private_leak_scan.py  test_schema_smoke.py
(+44 files in other folders)
